feat: Implement unit tests for models and storage, removing ad-hoc verification scripts and the `reset_data` function.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ dependencies = [
 ]
 requires-python = ">=3.7"
 
+[project.optional-dependencies]
+dev = ["pytest"]
+
 [project.scripts]
 pybjack = "blackjack.__main__:main"
 blackjack = "blackjack.__main__:main"
